--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,7 +47,7 @@ deploy:github:
     - git config user.name "${GITHUB_USER_NAME}"
     - git config user.email "${GITHUB_USER_EMAIL}"
     - git remote set-url origin ${GITHUB_REPO}
-    - git push origin ${CI_COMMIT_REF_NAME} --follow-tags
+    - git push origin master --follow-tags
 
 # Push to NPM
 deploy:npm:
