Switched to peer dependency for sigplot and changed all barrel imports into explicit references (for Webpack integration)

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "sigplot",
     "typescript"
   ],
-  "dependencies": {
+  "peerDependencies": {
     "sigplot": "git://github.com/geontech/sigplot.git#develop-2.0-ts"
   },
   "devDependencies": {
