--- a/package.json
+++ b/package.json
@@ -27,13 +27,12 @@
     "sigplot",
     "typescript"
   ],
-  "peerDependencies": {
+  "dependencies": {
     "sigplot": "git://github.com/geontech/sigplot.git#develop-2.0-ts"
   },
   "devDependencies": {
     "@types/node": "^8.0.19",
     "rimraf": "^2.6.1",
-    "sigplot": "git://github.com/geontech/sigplot.git#develop-2.0-ts",
     "ts-loader": "^2.3.2",
     "ts-node": "^3.3.0",
     "tslint": "~4.5.0",
